# bob-datastage

./: .gitignore  DATASTAGE_MCP_COMPLETE_GUIDE.md  DATASTAGE_MCP_TECHNICAL_REPORT.md  MCP_TECHNICAL_REPORT.md  README.md  requirements.txt
bob-history/: compile.md  listjob-compile.md
datastage-server/: BUILD_NOW.md  CANVAS_FIX.md  INSTALLATION.md  QUICKSTART.md  README.md  package.json  tsconfig.json
datastage-server/flow_extract/: DataStage-README.json
datastage-server/flow_extract/connection/: Data Warehouse.json
datastage-server/flow_extract/data_intg_flow/: Employee Ranking_DATASTAGE_ZIP_IMPORT.json
datastage-server/flow_extract/environment/: default_datastage_px.json
datastage-server/flow_extract/job/: Employee Ranking_DATASTAGE_ZIP_IMPORT.DataStage job.json
datastage-server/src/: index.ts
datastage-server/src/api/: CPDClient.ts
datastage-server/src/auth/: AuthManager.ts
datastage-server/src/config/: constants.ts  (+1 more)
datastage-server/testing_use_case/: FIX_DOCUMENTATION.md  MANUAL_FIX_INSTRUCTIONS.md
employee_ranking_extracted/: DataStage-README.json
employee_ranking_extracted/data_intg_flow/: Employee Ranking.json
employee_ranking_extracted/job/: Employee Ranking.DataStage job.json
python-mcp/: .gitignore  explanation.md  pyproject.toml  requirements.txt  run_server.py  tutorial.md
python-mcp/src/: __init__.py  server.py
python-mcp/src/api/: __init__.py  cpd_client.py
python-mcp/src/auth/: __init__.py  auth_manager.py
python-mcp/src/config/: __init__.py  constants.py
python-mcp/src/utils/: __init__.py  cache.py  logger.py  retry.py
(+5 files in other folders)
